// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Markdown Blockquote should preserve custom css class 1`] = `
<blockquote
  className="rsg--blockquote-0 test-class"
>
  To be, or not to be: that is the question
</blockquote>
`;

exports[`Markdown Blockquote should render a blockquote 1`] = `
<blockquote
  className="rsg--blockquote-0"
>
  To be, or not to be: that is the question
</blockquote>
`;
